<resources>
    <string name="app_name">Simple Notes</string>

    <string name="notes_list">List Notes</string>
    <string name="notes_name">Notes name</string>
    <string name="notes_text">Super-Puper text</string>
    <string name="content_descr_float_add">Add</string>
    <string name="first_note_name">Первая заметка</string>
    <string name="first_note_text">Текст первой заметки</string>
    <string name="second_note_name">Вторая заметка</string>
    <string name="second_note_text">Текст второй заметки</string>
    <string name="notes_text_font_name">Шрифт текста</string>
    <string name="notes_text_font_size_name">Размер шрифта</string>
    <string name="notes_text_background_color_name">Цвет фона</string>
    <string name="preferences_ok_btn">Подтвердить изменения</string>
    <string name="preferences_cancel_btn">Отменить изменения</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="drawer_header">Simple Notes</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="about_developers">About developers</string>
    <string name="preferences">Preferences</string>
    <string name="delete_msg">Delete</string>
    <string name="add_msg">Add</string>
    <string name="action_rename">Rename</string>
    <string name="rename_msg">Rename</string>
    <string name="alert_title">Alert title</string>
    <string name="alert_message">Alert message</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="channel_description">Channel description</string>
    <string name="channel_name">Channel name</string>
    <string name="content_title">Simple Notes</string>
    <string name="content_text">This is notification</string>
    <string name="notification">Notification</string>
    <string name="notes">Notes</string>
    <string name="empty">Список заметок пуст</string>
    <string name="btn_save">Save</string>
    <string name="hint_note_text">Text</string>
    <string name="hint_note_name">Title</string>
    <string name="btn_update">Update</string>
    <string name="action_update">Update</string>
    <string name="retry">Retry</string>


</resources>