<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:columnCount="2"
    tools:context=".ui.preferences.PreferencesFragment">

    <TextView
        android:layout_margin="@dimen/small_margin"
        android:text="@string/notes_text_font_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Наименование" />

    <EditText
        android:id="@+id/text_font_param"
        android:layout_margin="@dimen/small_margin"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Параметр" />

    <TextView
        android:layout_margin="@dimen/small_margin"
        android:text="@string/notes_text_font_size_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Наименование" />

    <EditText
        android:id="@+id/text_font_size_param"
        android:layout_margin="@dimen/small_margin"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Параметр" />

    <TextView
        android:layout_margin="@dimen/small_margin"
        android:text="@string/notes_text_background_color_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Наименование" />

    <EditText
        android:id="@+id/text_background_color_param"
        android:layout_margin="@dimen/small_margin"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        tools:text="Параметр" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/preferences_ok_btn"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/preferences_ok_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/preferences_cancel_btn"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/small_margin"
        android:text="@string/preferences_cancel_btn" />

</GridLayout>